# AIDlink

./: .gitignore  ESP32-BOARDS.md  LEARNING.md  LICENSE  NOTICE  README.md  TRADEMARKS.md
docs/: eta-estimator.md
docs/superpowers/plans/: 2026-07-05-esp-idf-foundation.md  2026-07-15-theoretical-eta.md
docs/superpowers/specs/: 2026-07-05-esp-idf-usb-ncm-design.md  2026-07-15-eta-stability-replay.md  2026-07-15-theoretical-eta-design.md  2026-07-16-orthodromic-vertical-eta-design.md
examples/: flight_info.json
firmware-idf/: .gitignore  CMakeLists.txt  README.md  flash-idf.sh  partitions.csv  sdkconfig 11  sdkconfig 15  sdkconfig 18  sdkconfig 2  sdkconfig 2.defaults  sdkconfig 3  sdkconfig 4  sdkconfig 5  sdkconfig 8  sdkconfig 9  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.t3s3
firmware-idf/.cache/clangd/index/: adbp.c.38838CDBFB319341.idx  adbp.h.CDBB9F4C3B4F6DFB.idx  adbp_frame.c.E814713BA2036C4D.idx  adbp_frame.h.17754CB1DD940226.idx  aidlink_main.c.C7C88235E7D552FC.idx  audio_device.c.94961814B97AA539.idx  auth.c.506A11F3DBE0B1BF.idx  auth.h.87A1AE4998686E29.idx  bth_device.c.EDD96E95B5570783.idx  cdc.h.8C55745715F6BE2E.idx  cdc_device.c.FA0F8F22C6443526.idx  config.c.60E4AA4DC345BB0A.idx  config.h.4565E31ACC290B76.idx  config_util.c.0C7DE1B4BE8E832B.idx  dcd.h.7CF1AA13939FC20E.idx  dcd_dwc2.c.E4325B6C89573C68.idx  descriptors_control.c.073B2F341458DC2E.idx  descriptors_control.h.53147620BFAB3991.idx  dfu_device.c.7BB8D784B9C36027.idx  dfu_rt_device.c.6A588B43F9F9AA5C.idx  dnsfwd.c.DFFE339401AB98E2.idx  dnsfwd.h.5BA8DA3DEDEEF7A8.idx  dnsfwd_util.c.0E9C880DD3144C8F.idx  dwc2_common.c.7A78BEA49B8A58B9.idx  dwc2_common.h.BB81EA50818FCEFF.idx  dwc2_esp32.h.3755430A4388A9A4.idx  dwc2_type.h.A9EDD8FAF14A0403.idx  ecm_rndis_device.c.0DD65AE92CEEB447.idx  geo.c.837AC317E2718B46.idx  geo.h.52FA39DC387A104D.idx  hid_device.c.293CB06CF2062A8B.idx  led_strip.h.662B4DF5F86F73E5.idx  led_strip_api.c.AD2FF759834BFCB4.idx  led_strip_interface.h.90350AB94FAC5300.idx  led_strip_rmt.h.6BF5E4EC46312DD3.idx  led_strip_rmt_dev.c.B8B82F4A919797D4.idx  led_strip_rmt_encoder.c.16CE50A5DD37A46D.idx  led_strip_rmt_encoder.h.EB36A21F6D5FC537.idx  led_strip_spi.h.37A02D4E55718634.idx  led_strip_spi_dev.c.78374A864E8662C9.idx  (+86 more)
firmware-idf/host_test/: replay_eta.c  test_adbp_frame.c  test_airports.c  test_config_subnet.c  test_derive.c  test_dnsfwd_remap.c  test_eta.c  test_eta_profile.c  test_geo.c  test_perfdb.c  test_poller_sources.c  test_tzdb.c  test_web_util.c
firmware-idf/main/: CMakeLists 2.txt  CMakeLists.txt  adbp.c  adbp.h  adbp_frame.c  adbp_frame.h  aidlink_main.c  airports.c  airports.h  auth.c  auth.h  board.c  board.h  config 2.h  config.c  config.h  config_util 2.c  derive.c  derive.h  display.c  display.h  dnsfwd 2.h  dnsfwd.c  dnsfwd_util.c  eta.c  eta.h  eta_profile.c  eta_profile.h  flightview.c  flightview.h  font_aid12.c  font_aid16.c  font_aid8.c  font_arrow.c  font_cloud.c  font_eta.c  font_globe.c  font_tod.c  geo.c  geo.h  (+30 more)
firmware/aidlink/: aidlink.ino  defs.h
tools/: autoflash-idf.sh  bump_buildnum.py  extract_track.py  flash.sh  gen_arrow_font.py  gen_cloud_font.py  gen_eta_font.py  gen_globe_font.py  gen_oled_fonts.sh  gen_perfdb.py  gen_tod_font.py  gen_tzdb.py  reboot.py  replay_flight.py  tee_serial.py
